[package]
name = "stitches"
description = "Search spaces to solve math problems fast"
license = "MIT"
repository = "https://github.com/shelbyd/stitches"
version = "0.1.0"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
edition = "2018"

[dependencies]
human_format = "1.0.3"
num_cpus = "1.0"
rayon = "1.0.3"

[dev-dependencies]
bencher = "0.1.5"

[profile.release]
debug = true
